fixed bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -85,16 +85,12 @@ a {
 }
 
 /* media queres */
-@media screen and (max-width:780px) {
-.section-1 {
-  padding: 0;
-  padding-top: 5rem;
+@media only screen and (max-width:780px) {
+.container{
+  width: 100%;
 }
 
-.section-2 {
-  margin-bottom: 15%;
-  padding: 0;
-  padding-left: 1.5rem;
-  padding-top: 2rem;
+.section-1,.section-2,.section-3 {
+ margin: 0 auto;
 }
-}
+ }
